Add API search landing
